force-app/main/default/objects/Stock_Adjustment__c/Stock_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Stock Adjustment</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Stock Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Adjustment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>