force-app/main/default/objects/Stock_Adjustment__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saleable to Non-Saleable Quantity</fullName>
            </value>
            <value>
                <fullName>Non-Saleable to Saleable Quantity</fullName>
            </value>
            <value>
                <fullName>Written Off Quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>