force-app/main/default/objects/Stock_Adjustment__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stock Adjustment</relationshipLabel>
    <relationshipName>Stock_Adjustment</relationshipName>
    <type>Lookup</type>
</CustomField>