force-app/main/default/objects/Stock_Adjustment__c/fields/Distributor_Stock__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Stock__c</fullName>
    <label>Distributor Stock</label>
    <referenceTo>Distributor_Stock__c</referenceTo>
    <relationshipLabel>Stock Adjustment</relationshipLabel>
    <relationshipName>Stock_Adjustment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>