force-app/main/default/objects/Stock_Adjustment__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>