force-app/main/default/objects/Stock_Adjustment__c/fields/Stock_Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_Adjustment_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Adjustment Date</label>
    <type>Date</type>
</CustomField>